Use Directory abstraction properly to obtain small common prefixes.